# ore-cuda-cli

./: Cargo.toml  README.md  build.rs  install.sh
cuda/: drillx.cu  drillx.h
cuda/equix/include/: equix.h
cuda/equix/src/: context.cu  context.h  equix.cu  solver.cu  solver.h  solver_heap.h
cuda/hashx/include/: hashx.h
cuda/hashx/src/: blake2.cu  blake2.h  compiler.h  context.cu  context.h  program.cu  program.h  siphash.h  siphash_rng.h
drillx/: Cargo.toml
drillx/drillx/: Cargo.toml
drillx/drillx/benches/: drillx_loop.rs
drillx/drillx/src/: lib.rs
drillx/examples/example-1/src/: main.rs
drillx/program/src/: lib.rs
src/: benchmark.rs  hashx_module.ll  mine.rs  send_and_confirm.rs  utils.rs
