[package]
name = "ore-cli"
version = "2.3.0"
description = "A command line interface for the ORE cryptocurrency mining."
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "ore"
path = "src/main.rs"

[features]
default = []
admin = []
gpu = ["cc"]

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.16"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
drillx = { path = "drillx/drillx" }
# drillx = "2.1.0"
equix = "0.1.6"
futures = "0.3.30"
num_cpus = "1.16.0"
ore-api = "2.1.0"
ore-utils = "2.1.0"
rand = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
serde_json = "1.0"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = ["no-entrypoint"] }
tokio = "1.35.1"
rayon = "1.5.1"

[build-dependencies]
cc = { version = "1.0", optional = true }

[patch.crates-io]
drillx = { path = "drillx/drillx" }

[profile.release]
opt-level = 3   # Optimize for binary size. You can use "3" for full optimizations if binary size isn't an issue.
codegen-units = 1 # Better optimization with fewer codegen units
lto = true        # Enable Link Time Optimization (LTO)
debug = false     # Disable debug info to reduce binary size
panic = 'abort'   # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]
